[package]
name = "sp-wasm"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
docopt = "1"
libc = "0.2"
mozjs = "0.10"
env_logger = "0.6"
log = "0.4"
lazy_static = "1.3"
path-clean = "0.1"
itertools = "0.8"

[features]
debugmozjs = ["mozjs/debugmozjs"]

[[bin]]
path = "src/main.rs"
name = "sp_wasm"

[profile.release]
lto = true