[package]
name = "sp-wasm-engine"
version = "0.2.2"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

[dependencies]
sp-wasm-memfs = { path = "../sp-wasm-memfs"}
sp-wasm-hostfs = { path = "../sp-wasm-hostfs"}
libc = "0.2"
mozjs = "0.10"
log = "0.4"
lazy_static = "1.3"
itertools = "0.8"
path-clean = "0.1"
failure = "0.1"

[features]
debugmozjs = ["mozjs/debugmozjs"]
