[package]
name = "sp-wasm-engine"
version = "0.3.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/sp-wasm"
homepage = "https://github.com/golemfactory/sp-wasm"
documentation = "https://docs.rs/sp-wasm-engine"
description = "Runtime/engine of Golem's sp-wasm sandbox"

[dependencies]
sp-wasm-memfs = { path = "../sp-wasm-memfs"}
libc = "0.2"
mozjs = "0.10"
log = "0.4"
lazy_static = "1.3"
itertools = "0.8"
path-clean = "0.1"
thiserror = "1"

[features]
debugmozjs = ["mozjs/debugmozjs"]
